# mm-fun

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cargo_test.yml
config/: simulator.toml  strategy.toml
docker/: README.md
docker/aeronmd/: Dockerfile  MediaDriverLauncher.java
docker/mm_collector/: Dockerfile
docker/mm_pricing/: Dockerfile
docker/mm_simulator/: Dockerfile
docker/mm_strategy/: Dockerfile
mm_aeron/: Cargo.toml
mm_aeron/src/: client.rs  errors.rs  lib.rs  publisher.rs  subscriber.rs
mm_aeron/tests/: integration_test.rs
mm_app/: Cargo.toml
mm_app/src/: aeron_config.rs  cli.rs  config_loader.rs  lib.rs  monitoring.rs  orderbook_helpers.rs  orderbook_sync.rs  publisher_helpers.rs  shutdown_handler.rs  time_utils.rs  tracing_setup.rs  zmq_config.rs
mm_backtest/: Cargo.toml
mm_backtest/src/: lib.rs  loader.rs  metrics.rs  replay.rs
mm_binary/: Cargo.toml
mm_binary/benches/: protocol_benchmark.rs
mm_binary/src/: checksum.rs  compressed_string.rs  errors.rs  fixed_point.rs  lib.rs  messages.rs  orderbook_message.rs  serde_helpers.rs  simd_arm.rs  simd_x86.rs
mm_http/: Cargo.toml
mm_http/src/: binance.rs  circuit_breaker.rs  client.rs  errors.rs  lib.rs
mm_orderbook/: Cargo.toml
mm_orderbook/benches/: orderbook_bench.rs
mm_orderbook/src/: lib.rs  orderbook.rs
mm_ratelimit/: Cargo.toml
mm_ratelimit/src/: error.rs  fixed_window.rs  leaky_bucket.rs  lib.rs  limiter.rs  multi_limiter.rs  time.rs
mm_ratelimit/src/exchanges/: binance.rs  bybit.rs  coinbase.rs  kraken.rs  mod.rs
mm_sim_executor/: Cargo.toml
mm_sim_executor/src/: lib.rs
mm_strategy/: Cargo.toml
mm_strategy/src/: drift_estimator.rs  inventory_manager.rs  lib.rs  quote_engine.rs  risk_manager.rs
mm_tg/: .env.example  Cargo.toml
mm_tg/src/: auth.rs  bot_commands.rs  circuit_breaker.rs  commands.rs  error_handling.rs  handle.rs  handlers.rs  lib.rs  rate_limiter.rs  trading_thread.rs
mm_types/: Cargo.toml
mm_types/src/: lib.rs
mm_ws/: Cargo.toml
mm_ws/benches/: ingestion_benchmark.rs
mm_ws/src/: affinity.rs  buffer_pool.rs  health.rs  ingestion.rs  lib.rs  metrics.rs  production.rs
mm_zmq/: Cargo.toml
mm_zmq/src/: errors.rs  heartbeat.rs  lib.rs  publisher.rs  subscriber.rs
scripts/: generate_sample_data.py  start-dev.sh
