[package]
name = "mm_aeron"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
parking_lot = { workspace = true }
rusteron-client = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mm_binary = { workspace = true }

[features]
default = []
