[package]
name = "mm_app"
version = "0.1.0"
edition = "2021"

[dependencies]
mm_aeron = { workspace = true }
mm_binary = { workspace = true }
mm_http = { workspace = true }
mm_orderbook = { workspace = true }
mm_ws = { workspace = true }

bytes = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
simd-json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[[bin]]
name = "mm_collector"
path = "src/bin/mm_collector.rs"

[[bin]]
name = "mm_pricing"
path = "src/bin/mm_pricing.rs"

[features]
default = []
