[package]
name = "mm_http"
version = "0.1.0"
edition = "2021"

[dependencies]
mm_binary = { workspace = true }
mm_ratelimit = { path = "../mm_ratelimit" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
