[package]
name = "mm_orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
mm_binary = { workspace = true }

ordered-float = { workspace = true }
simd-json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []

[[bench]]
name = "orderbook_bench"
harness = false
