[package]
name = "mm_tg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
num_cpus = { workspace = true }
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[features]
default = []
